--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "object-hash": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -20,6 +21,7 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native-clipboard/clipboard":"^1.16.0",
     "@react-native/babel-preset": "0.76.6",
     "@react-native/eslint-config": "0.76.6",
     "@react-native/metro-config": "0.76.6",
